<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleDice</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="s0">0</string>
    <string name="d4">d4</string>
    <string name="d6">d6</string>
    <string name="d8">d8</string>
    <string name="d10">d10</string>
    <string name="d12">d12</string>
    <string name="d20">d20</string>
    <string name="title_activity_configure">Configure</string>
    <string name="submit">Submit</string>

</resources>
