<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DieRoller$PlaceholderFragment">

    <RelativeLayout android:layout_width="match_parent" android:layout_height="fill_parent">
        <TextView
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:textSize="128dp"
        android:text="0"/>
        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36dp"
            android:text="0"
            android:layout_toRightOf="@+id/roll"
            android:layout_toEndOf="@+id/roll" />

        <LinearLayout
            android:id="@+id/die"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentBottom="true">
            <Button
                style="@style/smoothButton"
                android:id="@+id/d4"
                android:text="@string/d4"/>
            <Button
                style="@style/smoothButton"
                android:id="@+id/d6"
                android:text="@string/d6"/>
            <Button
                style="@style/smoothButton"
                android:id="@+id/d10"
                android:text="@string/d10"/>
            <Button
                style="@style/smoothButton"
                android:id="@+id/d20"
                android:text="@string/d20"/>
            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_above="@id/die">
            <Button
                style="@style/smoothLabel"
                android:id="@+id/d4count"
                android:text="@string/s0"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
