<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".DieRoller" tools:ignore="MergeRootFrame" >

    <RelativeLayout android:layout_width="match_parent" android:layout_height="fill_parent"
        android:id="@+id/view">
        <TextView
            android:id="@+id/roll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:layout_alignBottom="@+id/uppercount"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="128dp"
            android:text="0"/>
        <TextView
            android:id="@+id/bonus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="36dp"
            android:text="0"
            android:layout_toRightOf="@id/roll"
            android:layout_alignTop="@id/roll"
            android:layout_toEndOf="@id/roll" />
        <Button
            android:id="@+id/stop"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@+id/count"
            android:alpha="0.0"
            android:onClick="onTotalClick"
        />
        <LinearLayout
            android:id="@+id/upperdie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="25dp"
            android:layout_above="@+id/count"
            android:orientation="horizontal">
            <Button
                style="@style/smoothButton"
                android:text="@string/d12"/>
            <Button
                style="@style/WS"/>
            <Button
                style="@style/WS"/>
            <Button
                style="@style/smoothButton"
                android:text="@string/d20"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/uppercount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_above="@id/upperdie">
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
            <Button
                style="@style/WS"/>
            <Button
                style="@style/WS"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/die"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                style="@style/smoothButton"
                android:text="@string/d4"/>
            <Button
                style="@style/smoothButton"
                android:text="@string/d6"/>
            <Button
                style="@style/smoothButton"
                android:text="@string/d8"/>
            <Button
                style="@style/smoothButton"
                android:text="@string/d10"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_above="@id/die">
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
            <Button
                style="@style/smoothLabel"
                android:text="@string/s0"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>
